fixed wrong background on header and search js

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,6 +12,7 @@
 
 .header-container {
     height: 80px;
+    background-color: var(--white);
 }
 
 .header-text {
@@ -40,8 +41,8 @@
 
 /* dark theme */
 
-header[data-theme="dark"] {
-    background-color: var(--darkBg);
+.header-container[data-theme="dark"] {
+    background-color: var(--darkElements);
 }
 
 .header-text[data-theme="dark"] {
