--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -18,11 +18,11 @@
     /* change this later to match */
     /* margin: 0 5% 0 5%; */
     width: 100%;
-    background-color: var(--lightBg);
+    background-color: var(--white);
 }
 
 .input-group-text {
-    background-color: var(--lightBg);
+    background-color: var(--white);
     border: 0;
     height: 50px;
 }
@@ -31,7 +31,7 @@
     border: 0;
     height: 40px;
     width: 100%;
-    background-color: var(--lightBg);
+    background-color: var(--white);
 }
 
 .form-control::placeholder {
